# claude-3d-playground

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: design.md
examples/: box_with_lid.py  openscad_demo.scad
projects/corner-lamp-shelf/: design.py  notes.md  params.json
projects/corner-lamp-shelf/reference/: corner_shelf_small.stl  parametric_corner_shelf.scad  parametric_corner_shelf.stl  simple_corner_shelf.stl
projects/corner-lamp-shelf/stl/: arch_bracket_x2.stl  arch_bracket_x4.stl  bracket_x4.stl  lower_shelf.stl  upper_corner.stl  upper_outer.stl  upper_right.stl  upper_shelf.stl  upper_top.stl
src/claude_3d_playground/: __init__.py  cadquery_utils.py  mesh.py  openscad.py
tests/unit/: test_mesh.py  test_openscad.py
